# django_avito

./: .gitignore  README.md  pyproject.toml  test.http  utils.py
ads/: admin.py  models.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_ad_location_user_delete_ads_alter_category_options_and_more.py
ads/views/: __init__.py  ad.py  category.py  location.py  user.py
avito/: settings.py  urls.py
tools/: convert.py
